# thermal_stco

./: .gitignore  ECTC16_revised.csv  ECTC5_revised.csv  README.md  bonding_xml_parser.py  calibrated_iterations.py  calibration_data.csv  calibration_data_2xHeatSpreader.csv  calibration_data_largerHeatSpreader.csv  calibration_data_orig_backedup_030826.csv  generate_ectc_revised_csvs.py  heatsink_xml_parser.py  launch_gui_debug.sh  requirements.txt  requirements_gui.txt  run_therm.sh  therm.py  therm_xml_parser.py  thermal_analysis_gui.py
dedeepyo_integration/Rapid-LLM/: .gitignore  base_timing.py  config.py  hw_component.py  inference_timing.py  llm_execution.py  llm_util.py  memory_estimation.py  pyproject.toml  requirements.txt  run_perf.py  simulate_inference_graph.py  simulate_train_graph.py  tile.py  timing_model.py  train_timing.py  util.py
dedeepyo_integration/Rapid-LLM/.github/workflows/: ci.yml
dedeepyo_integration/Rapid-LLM/astrasim_lib/: __init__.py  bootstrap.py  config_generation.py  et_utils.py  executor.py  fault_projection.py  gmap.py  graph_debug.py  integration.py  layout_utils.py
dedeepyo_integration/Rapid-LLM/configs/hardware-config/: H100_SXM5_80GB.yaml  H100_SXM5_80GB_calibrated.yaml  H100_SXM5_80GB_calibrated_tuned.global.yaml  H100_SXM5_80GB_epinf.yaml  (+10 more)
dedeepyo_integration/Rapid-LLM/scripts/: install_astrasim.sh
dedeepyo_integration/Rapid-LLM/tools/: 2d_test.py  exec_with_fault.py  fault_meta_sweep.py  fault_sweep.py  gmap_sweep.py  mod_field.py  moe_gpu_nonpow2_seq.readme  overlap_finder.py  parallelism_sweep.py  util_finder.py
(+160 files in other folders)
